Animal statistics changed to animal data in getting the color