@@ -1,5 +1,6 @@
 package agh.ics.oop.presenter.util;
 
+import agh.ics.oop.model.datacollectors.AnimalData;
 import agh.ics.oop.model.datacollectors.AnimalStatistics;
 import agh.ics.oop.model.datacollectors.SimulationStatistics;
 import agh.ics.oop.model.worldelement.abstracts.Animal;
@@ -8,7 +9,7 @@ import javafx.scene.paint.Color;
 
 import java.util.List;
 public class AnimalColor {
-    public static Color getAnimalColor(AnimalStatistics animalData, SimulationStatistics stats, int animalEnergy){
+    public static Color getAnimalColor(AnimalData animalData, SimulationStatistics stats, int animalEnergy){
         if(animalData == null) return Color.GRAY;
         double ONE = 1.0;
         double HALF = 0.5;
@@ -16,7 +17,7 @@ public class AnimalColor {
         List<Genotype> mostPopularGenotypes = stats.mostPopularGenotypes();
         double energyRatio = Math.min((double) animalData.energy() / animalEnergy, ONE);
         double r = 0.0, g = 0.0, b = 0.0;
-        if (!mostPopularGenotypes.isEmpty() && animalData.genotype().equals(mostPopularGenotypes.get(0))) {
+        if (!mostPopularGenotypes.isEmpty() && animalData.genotype().equals(mostPopularGenotypes.getFirst())) {
             r = energyRatio * HALF + HALF;
             b = energyRatio * HALF + HALF;
             g = energyRatio * QUARTER;
